--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <!-- Mobile Menu -->
-                <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-100">
+                <div id="mobile-menu" class="hidden md:hidden bg-white dark:bg-[#1a1a1a] border-t border-gray-100 dark:border-gray-800">
             <div class="px-4 pt-2 pb-6 space-y-2">
                 <a href="#inicio" class="block px-3 py-2 text-gray-700 dark:text-gray-300 hover:text-protein-600 dark:hover:text-protein-400 hover:bg-protein-50 dark:hover:bg-gray-700 rounded-md font-medium">Inicio</a>
                 <a href="#menu" class="block px-3 py-2 text-gray-700 dark:text-gray-300 hover:text-protein-600 dark:hover:text-protein-400 hover:bg-protein-50 dark:hover:bg-gray-700 rounded-md font-medium">Menú</a>
